--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,13 @@ span {
     cursor: pointer; 
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
 #header {
     background-color: rgb(64, 172, 98); 
     height: 50px;
